feat(#246): return identity_subject and avatar in search results if selected
